@@ -3,6 +3,7 @@
 	* generic/tkPort.h         Make sure that tkWinPort.h is always included
 	* generic/tkIntXlibDecls.h before tcl.h, otherwise the fallback for TCHAR
 	* win/tkWinPort.h          might go off before the inclusion of <tchar.h>
+	* win/tkWinDialog.c        Define OPENFILENAME_SIZE_VERSION_400 if needed
 	* compat/stdlib.h          Include <tcl.h> only when not already done.
 	* compat/unistd.h
 	* generic/tkInt.h          tkPort.h already includes tk.h, which includes tcl.h
